# foundationdb2-rs

./: Cargo.toml  README.md  gen_options
foundationdb/: Cargo.toml
foundationdb-sys/: Cargo.toml  build.rs
foundationdb-util/: Cargo.toml
foundationdb-util/src/: lib.rs  subspace.rs  tuple.rs
foundationdb-util/src/tuple/: bool.rs  bytes.rs  float.rs  integer.rs  option.rs  tuple.rs  uuid.rs  versionstamp.rs
foundationdb/src/: cluster.rs  database.rs  error.rs  future.rs  future_async.rs  future_ready.rs  lib.rs  network.rs  options.rs  outputs.rs  transaction.rs  transaction_async.rs  utils.rs
src/: cluster.rs  database.rs  error.rs  future.rs  lib.rs  network.rs  transaction.rs
