[package]
name = "foundationdb-util"
version = "0.1.0"
authors = ["Dan Skorupski <boardwalk@ersatsz.com"]
edition = "2018"

[features]
default = ["uuid"]

[dependencies]
byteorder = "1.3"
foundationdb = { path = "../foundationdb" }
uuid = { version = "0.7", optional = true }

[dev-dependencies]
rand = "0.6"