[package]
name = "foundationdb"
version = "0.1.0"
authors = ["Dan Skorupski <boardwalk@ersatsz.com>"]
edition = "2018"

[features]
default = ["async"]
async = ["futures-preview"]

[dependencies]
foundationdb-sys = { path = "../foundationdb-sys" }
futures-preview = { version = "0.3.0-alpha.13", optional = true }
